Fixed content overflow in features partial

--- a/src/stylesheets/common.css
+++ b/src/stylesheets/common.css
@@ -205,6 +205,8 @@ button.small, .button.small {
 
 .strk-feature-block {
   padding: 18px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .strk-feature-block li {
